create Readme files for license, contributions, code of conduct and changelogs

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "author": "Amschel",
   "type": "module",
-  
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
